--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,19 @@
 <div class="container">
     <div class="jumbotron">
-        <h2>Mongoose Scraper</h2>
-    </div>
-    {{!-- jumbotron --}}
-    {{#each article}}
+        <div class="row">
+           <h1><span id="a">Mongoose Scraper</span></h1> 
+        </div>
+        <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-2">
+                <button class="btn btn-warning btn-lg" id="scrape">Scrape</button>
+            </div>
+            <div class="col-sm-2">
+                <button class="btn btn-warning btn-lg" id="clear">Clear</button>
+            </div>
+        </div>
+        <div class="row" id="pans">
+        {{#each article}}
     <div class="panel panel-primary">
         <div class="panel-heading">
            <div class="row">
@@ -11,7 +21,7 @@
                <h3>{{this.title}}</h3> 
             </div>
             <div class="col-sm-2">
-                <button type="button" class="btn btn-info btn-success" data-id="{{this._id}}" data-toggle="modal" data-target="#myModal" id="getNote">Notes</button>
+                <button type="button" class="btn btn-info btn-success getNote" data-id="{{this._id}}" data-toggle="modal" data-target="#myModal">Notes</button>
             </div>   
            </div>
         </div>
@@ -29,19 +39,25 @@
             <div class="modal-body">
                 <div class="form-group">
                     <label for="comment">Note:</label>
-                    <textarea class="form-control" rows="5" id="body"></textarea>
+                    <textarea class="form-control" rows="5" id="body">Write Your Note</textarea>
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" data-id="{{this._id}}" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-default addNote" data-dismiss="modal">Close</button>
             </div>
             </div>
-
         </div>
     </div>
+        
 {{!-- modal --}}
+
     </div>
     {{/each}}
+    </div>
+    </div>
+    {{!-- jumbotron --}}
+    
+    
     {{!-- panel --}}
 
 </div>
